--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "babel-eslint": "^8.2.1",
     "chalk": "^2.3.1",
+    "classnames": "^2.2.6",
     "eslint": "^4.15.0",
     "eslint-plugin-react": "^7.5.1",
     "gatsby": "^1.9.202",
